After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 684783 - Fail to popup wrong certificate dialog
Fail to popup wrong certificate dialog
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Auth client
2.33.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2012-09-25 13:31 UTC by Guillaume Desmottes
Modified: 2012-09-25 13:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
server-tls-handler: fix the variant type when fetching ServerCertificate (1.06 KB, patch)
2012-09-25 13:34 UTC, Guillaume Desmottes
committed Details | Review

Description Guillaume Desmottes 2012-09-25 13:31:29 UTC
(lt-empathy-auth-client:8780): empathy-DEBUG: tls_handler_init_async: Creating an TpTLSCertificate for path , bus name :1.2234


We don't get the path.
Comment 1 Guillaume Desmottes 2012-09-25 13:34:07 UTC
Created attachment 225135 [details] [review]
server-tls-handler: fix the variant type when fetching ServerCertificate

g_variant_lookup() fails if we don't specificy that this string is secretly an
object path.
Comment 2 Guillaume Desmottes 2012-09-25 13:45:14 UTC
Will be in 3.6.1

Attachment 225135 [details] pushed as 5a2ab98 - server-tls-handler: fix the variant type when fetching ServerCertificate