server-tls-handler: fix the variant type when fetching ServerCertificate

g_variant_lookup() fails if we don't specificy that this string is secretly an
object path.

https://bugzilla.gnome.org/show_bug.cgi?id=684783